OpenRewriteによるSpringBoot3.3対応